Fix alignment on image 1 (Attempt 2)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ nav a{
     height: auto;
 }
 .firstImage {
-    width: 400px;
+    width: 350px;
     height: auto;
     margin-left: 50px;
     /* margin-right: 100px; */
